--- a/be/src/docs/上传组件.md
+++ b/be/src/docs/上传组件.md
@@ -11,7 +11,7 @@ on(upload, 'drop', e => {
 })
 ```
 ### 点击上传
-点击上传的原理是:监听点击事件,当某个节点被点击了,则处罚`input[type=file]`的点击:
+点击上传的原理是:监听点击事件,当某个节点被点击了,则触发`input[type=file]`的点击:
 
 ```
 on(upload, 'click', e => {
