--- a/be/src/docs/表单验证.md
+++ b/be/src/docs/表单验证.md
@@ -104,8 +104,8 @@ mounted() {
 }
 ```
 
-显然，这样也要修改`asyncValidate`函数，该函数生成的不该再直接是`Promise`对象，而是一个函数，
-再由返回的这个函数返回`Promise`对象才可，修改也很简单：
+显然，这样也要修改`asyncValidate`函数，该函数不该再直接返回`Promise`对象，而是返回一个函数，
+执行这个函数再返回`Promise`对象才可，修改也很简单：
 
 ```
 export function asyncValidate(rule, vm) {
