--- a/be/src/docs/表单验证.md
+++ b/be/src/docs/表单验证.md
@@ -41,7 +41,7 @@ on(this.$refs['input'], trigger, () => {
 
 ### 表单对象验证
 当使用`form`表单时，我该如何验证上面设计的单个表单条目。由于实习工作原因，一直没时间去好好想想，
-直接暴击去取`dom`元素修改其样式，直到后来这个项目里用到`vuex`时，我才突然想到`可不可以设计一个Store来保存`
+直接暴力去取`dom`元素修改其样式，直到后来这个项目里用到`vuex`时，我才突然想到`可不可以设计一个Store来保存`
 `已经渲染的需要验证的单个表单条目`。想了想，觉得可行，于是就开始编码。
 
 ### 1. 设计`Store`类
@@ -146,7 +146,7 @@ export function asyncValidate(rule, vm) {
 
 上面说到，利用`Store`存储了各个表单条目各自的验证规则，那么接下来就是利用他们了。
 为了获取`Store`里存储的`验证规则`的`key`，我为了`formItem组件`声明了`data-prop`
-属性（没错，就是上面的`Store.set(this.prop, validates)`）,这样既可以获取相应验证
+属性（没错，就是上面的`Store.set(this.prop, validates)`）,这样就可以获取相应验证
 规则：
 
 ```
