--- a/server/docs/日志中间件.md
+++ b/server/docs/日志中间件.md
@@ -80,5 +80,5 @@ module.exports = () => {
 通过`app.use(logger())`便完成了日志中间件。
 
 ## 其他文档
-  - [使用mongodb]('./使用mongodb.md)
-  - [跨域问题]('./跨域问题.md)
+  - [使用mongodb](./使用mongodb.md)
+  - [跨域问题](./跨域问题.md)
