--- a/be/src/docs/表单验证.md
+++ b/be/src/docs/表单验证.md
@@ -173,3 +173,8 @@ this.$refs['form'].onsubmit = () => {
 ```
 
 这下便能知道传入`vm`的用意了吧。
+
+## 其他文档
+- [网页全屏](https://github.com/mvpzx/elapse/blob/master/be/src/docs/%E7%BD%91%E9%A1%B5%E5%85%A8%E5%B1%8F.md)
+- [上传组件](https://github.com/mvpzx/elapse/blob/master/be/src/docs/上传组件.md)
+- [Markdown编辑器](https://github.com/mvpzx/elapse/blob/master/be/src/docs/Markdown编辑器.md)
