be: add user-management & 403 & 404 server: update user

--- a/server/docs/页面部署与接口服务.md
+++ b/server/docs/页面部署与接口服务.md
@@ -1,14 +1,14 @@
 # 前端页面与接口部署
 使用的是腾讯云的主机，操作系统: Ubuntu 16.04。
 
-## 使用nginx部署页面
+## 1. 使用nginx部署页面
 我购买了域名`elapse.top`，并配置了域名`*.elapse.top`解析到我购买的主机的公网ip。
 接下来我的目标是访问`admin.elapse.top`就是访问打包的后端管理系统，那么配置过程如下。
 
-### 安装nginx
+### 1.1 安装nginx
 `sudo apt-get install nginx`
 
-### 编写配置文件
+### 1.2 编写配置文件
 进入`/etc/nginx/sites-enabled`新建文件`admin.conf`，内容如下:
 
 ```
@@ -23,19 +23,19 @@ server {
   }
 }
 ```
-### 重启nginx
+### 1.3 重启nginx
 `service nginx reload`
 
 至此即可。
 
-## NodeJs接口部署
+## 2. NodeJs接口部署
 使用pm2部署接口服务。
 
-### 安装`pm2`
+### 2.1 安装`pm2`
 
 `npm install pm2 -g`
 
-### 编写配置文件
+### 2.2 编写配置文件
 在nodejs项目下新建配置文件，假设取名为：`pm2.conf.json`，内容如下：
 
 ```
@@ -56,7 +56,7 @@ server {
 }
 ```
 
-### 配置启动命令
+### 2.3 配置启动命令
 在`package.json`的`scripts`部分新增一条：
 
 ```
@@ -65,7 +65,7 @@ server {
 
 `--watch`是自动重启。
 
-### 管理和监控
+### 2.4 管理和监控
 1.打开命令行，输入：`pm2 list`,即可查看pm2集成的nodejs服务。
 2.如若查看某个服务详情，可通过这条命令：`pm2 show [服务的Id或者服务的App name]`查看。
 3.停止、重启等命令：
