--- a/server/docs/日志中间件.md
+++ b/server/docs/日志中间件.md
@@ -82,4 +82,4 @@ module.exports = () => {
 ## 其他文档
   - [使用mongodb](./使用mongodb.md)
   - [跨域问题](./跨域问题.md)
-  - [jwt签发与认证](docs/jwt签发与认证.md)
+  - [jwt签发与认证](./jwt签发与认证.md)
