--- a/be/src/docs/上传组件.md
+++ b/be/src/docs/上传组件.md
@@ -25,7 +25,5 @@ on(input, 'change', e => {
 
 当然`file`的获取也需要通过`input[type=file]`
 
-## 其他文档
-- [表单验证](https://github.com/mvpzx/elapse/blob/master/be/src/docs/%E8%A1%A8%E5%8D%95%E9%AA%8C%E8%AF%81.md)
-- [网页全屏](https://github.com/mvpzx/elapse/blob/master/be/src/docs/%E7%BD%91%E9%A1%B5%E5%85%A8%E5%B1%8F.md)
-- [Markdown编辑器](https://github.com/mvpzx/elapse/blob/master/be/src/docs/Markdown编辑器.md)
+## 上传到七牛云
+尚未编写
