--- a/be/src/docs/上传组件.md
+++ b/be/src/docs/上传组件.md
@@ -26,4 +26,59 @@ on(input, 'change', e => {
 当然`file`的获取也需要通过`input[type=file]`
 
 ## 上传到七牛云
-尚未编写
+上传文件到七牛云是需要token的，所以接下来的行文分为两部分：首先编写后端接口提供token，然后前端通过ajax上传文件到七牛云。
+
+### 七牛上传token
+这里以`node.js`编写的服务端为例：
+
+```
+const qiniu = require('qiniu')
+const accessKey = ''  // 请填写你的七牛key
+const secretKey = ''  // 请填写你的七牛key
+const scope = ''      // 请填写你想存放文件的七牛存储空间
+const expires = 7200
+const options = { scope, expires }
+const mac = new qiniu.auth.digest.Mac(accessKey, secretKey)
+const putPolicy = new qiniu.rs.PutPolicy(options)
+
+module.exports = {
+  getQiniuToken: async (ctx, next) => {
+    try {
+      const uploadToken = putPolicy.uploadToken(mac)
+      ctx.send({status: 'ok', message: '七牛上传凭证创建成功', data: uploadToken})
+    } catch (e) {
+      ctx.send({status: 'no', message: '七牛上传凭证创建失败'})
+    }
+  }
+}
+```
+
+### 前端上传文件
+通过使用`axios`以上传图片为例：
+```
+async uploadImage(file, token) {
+  let fileName = file.name
+  let param = new FormData()
+  param.append('chunk', 0)
+  param.append('chunk', 1)
+  param.append('file', file, fileName)
+  param.append('token', token)
+
+  const req = {
+    headers: {
+      'Content-Type': 'multipart/form-data'
+    },
+    url: this.api.upload,
+    method: 'Post',
+    data: param,
+  }
+
+  try {
+    const res = await axios(req)
+    return res
+  } catch (err) {
+    throw new Error(err)
+  }
+}
+```
+这样即可。
