--- a/docs/跨域问题.md
+++ b/docs/跨域问题.md
@@ -1,4 +1,5 @@
 ## 跨域问题
+
 > 为解决跨域问题,这里使用了`koa2-cors`,用法如下:
 
 ```
@@ -10,6 +11,7 @@ app.use(cors());
 ```
 
 ## 其他文档
-  - [使用mongodb](./使用mongodb.md)
-  - [日志中间件](./日志中间件.md)
-  - [jwt签发与认证](docs/jwt签发与认证.md)
+
+- [使用 mongodb](./使用mongodb.md)
+- [日志中间件](./日志中间件.md)
+- [jwt 签发与认证](docs/jwt签发与认证.md)
