--- a/docs/首屏时间.md
+++ b/docs/首屏时间.md
@@ -1,15 +1,17 @@
 # 首屏时间
+
 本文将介绍前端计算首屏时间的方法。
 
 ## 计算原理与编码
-计算首屏时间主要用到事件`DOMContentLoaded`，关于`DOMContentLoaded`和`load`的区别，MDN的介绍是：
+
+计算首屏时间主要用到事件`DOMContentLoaded`，关于`DOMContentLoaded`和`load`的区别，MDN 的介绍是：
 
 > 当初始的 HTML 文档被完全加载和解析完成之后，DOMContentLoaded 事件被触发，而无需等待样式表、图像和子框架的完成加载; load 应该仅用于检测一个完全加载的页面。
 
 那么只要在`DOMContentLoaded`之前开始计时，然后在`DOMContentLoaded`时计算结束时间即可得出首屏时间。
 但是，别忘了如果首屏有图片，图片的加载也是需要时间的。综上，计算首屏的思路为：
 
-*判断首屏有没有图片，如果没图片就用domready为结束时间。如果有图，判断加载状态，加载完毕之后则首屏完成加载，此时为结束时间。*
+_判断首屏有没有图片，如果没图片就用 domready 为结束时间。如果有图，判断加载状态，加载完毕之后则首屏完成加载，此时为结束时间。_
 
 那么问题来了，`开始时间怎么算？`,一个简单暴力的方法，在`html`的`head`开始计算，即：
 
@@ -51,7 +53,7 @@ domContentLoaded(() => {
     endTime = + new Date
   }
 
-  // load 应该仅用于检测一个完全加载的页面。 
+  // load 应该仅用于检测一个完全加载的页面。
   window.onload = () => {
     console.log(imgsLoadedTime)
     if (imgsLoadedTime.length > 0) {
@@ -62,17 +64,18 @@ domContentLoaded(() => {
   }
 })
 ```
+
 其中,`domContentLoaded`是我对`DOMContentLoaded`的封装（为了兼容，百度一下，你就会写）。
 
 ## window.performence
-说了这么多，其实在不考虑兼容性的情况下，可以直接用window.performence.timing来计算首屏时间和白屏时间（而且兼容性还不错），
+
+说了这么多，其实在不考虑兼容性的情况下，可以直接用 window.performence.timing 来计算首屏时间和白屏时间（而且兼容性还不错），
 其中：
-  - 白屏时间 = domLoading - fetchStart
-  - 首屏时间 = domContentLoadedEventEnd - domLoading
 
+- 白屏时间 = domLoading - fetchStart
+- 首屏时间 = domContentLoadedEventEnd - domLoading
 
-
-<!-- # 
+<!-- #
 ## 性能指标
  - 白屏时间
  - 首屏时间
@@ -105,7 +108,7 @@ window.onerror事件的详细信息参考这里。
   * @param {Long}    columnNumber   出错代码的列号
   * @param {Object}  errorObj       错误信息Object
   */
-  window.onerror = function(errorMessage, scriptURL, lineNumber,columnNumber,errorObj) { 
+  window.onerror = function(errorMessage, scriptURL, lineNumber,columnNumber,errorObj) {
       // code..
   }
 ```
