--- a/docs/网页全屏.md
+++ b/docs/网页全屏.md
@@ -1,4 +1,5 @@
 ## 网页全屏
+
 控制全屏的代码来自网络,具体如下:
 
 ```
@@ -32,6 +33,7 @@ function exitFullScreen() {
 ```
 
 ## 其他文档
+
 - [表单验证](https://github.com/mvpzx/elapse/blob/master/be/src/docs/%E8%A1%A8%E5%8D%95%E9%AA%8C%E8%AF%81.md)
 - [上传组件](https://github.com/mvpzx/elapse/blob/master/be/src/docs/上传组件.md)
-- [Markdown编辑器](https://github.com/mvpzx/elapse/blob/master/be/src/docs/Markdown编辑器.md)
+- [Markdown 编辑器](https://github.com/mvpzx/elapse/blob/master/be/src/docs/Markdown编辑器.md)
