--- a/docs/页面部署与接口服务.md
+++ b/docs/页面部署与接口服务.md
@@ -1,14 +1,18 @@
 # 前端页面与接口部署
+
 使用的是腾讯云的主机，操作系统: Ubuntu 16.04。
 
-## 1. 使用nginx部署页面
-我购买了域名`elapse.top`，并配置了域名`*.elapse.top`解析到我购买的主机的公网ip。
+## 1. 使用 nginx 部署页面
+
+我购买了域名`elapse.top`，并配置了域名`*.elapse.top`解析到我购买的主机的公网 ip。
 接下来我的目标是访问`admin.elapse.top`就是访问打包的后端管理系统，那么配置过程如下。
 
-### 1.1 安装nginx
+### 1.1 安装 nginx
+
 `sudo apt-get install nginx`
 
 ### 1.2 编写配置文件
+
 进入`/etc/nginx/sites-enabled`新建文件`admin.conf`，内容如下:
 
 ```
@@ -23,20 +27,24 @@ server {
   }
 }
 ```
-### 1.3 重启nginx
+
+### 1.3 重启 nginx
+
 `service nginx reload`
 
 至此即可。
 
-## 2. NodeJs接口部署
-使用pm2部署接口服务。
+## 2. NodeJs 接口部署
+
+使用 pm2 部署接口服务。
 
 ### 2.1 安装`pm2`
 
 `npm install pm2 -g`
 
 ### 2.2 编写配置文件
-在nodejs项目下新建配置文件，假设取名为：`pm2.conf.json`，内容如下：
+
+在 nodejs 项目下新建配置文件，假设取名为：`pm2.conf.json`，内容如下：
 
 ```
 {
@@ -57,6 +65,7 @@ server {
 ```
 
 ### 2.3 配置启动命令
+
 在`package.json`的`scripts`部分新增一条：
 
 ```
@@ -66,9 +75,8 @@ server {
 `--watch`是自动重启。
 
 ### 2.4 管理和监控
-1.打开命令行，输入：`pm2 list`,即可查看pm2集成的nodejs服务。
-2.如若查看某个服务详情，可通过这条命令：`pm2 show [服务的Id或者服务的App name]`查看。
-3.停止、重启等命令：
+
+1.打开命令行，输入：`pm2 list`,即可查看 pm2 集成的 nodejs 服务。 2.如若查看某个服务详情，可通过这条命令：`pm2 show [服务的Id或者服务的App name]`查看。 3.停止、重启等命令：
 
 ```
 pm2 stop [app name | id]    # 停止某个进程
